--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,8 +59,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+  - assets/mountains.jpg
   - assets/starrynight.jpg
   - assets/laurenhomepage.jpg
+  - assets/laurenhome.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
