Added likes to about page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,11 +46,17 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-  - assets/mountains.jpg
-  - assets/laurenhome.jpg
-  - assets/laurenabout.jpg
-  - assets/linkedin.png
+  - assets/books.jpg
   - assets/github.png
+  - assets/laurenabout.jpg
+  - assets/laurencar.JPG
+  - assets/laurengym.jpg
+  - assets/laurenhome.jpg
+  - assets/laurenskiing.jpg
+  - assets/laurentennis.PNG
+  - assets/laurentravel.jpg
+  - assets/linkedin.png
+  - assets/mountains.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
