--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ flutter:
   - assets/progressengineering.jpg
   - assets/theacademies.png
   - assets/unccharlotte.png
+  - assets/website.PNG
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
